# Polycode

Bindings/Scripts/create_lua_library/: create_lua_library.py
Core/Contents/Include/: PolyEntity.h
Core/Contents/Source/: PolyEntity.cpp
IDE/Contents/Include/: PolycodeUIEditor.h
IDE/Contents/Resources/FileTemplates/UIs/: Sample UI.uidef
IDE/Contents/Source/: PolycodeIDEApp.cpp  PolycodeUIEditor.cpp
Modules/Contents/UI/: CMakeLists.txt
Modules/Contents/UI/Include/: PolyUIDrawingWidget.h  PolyUILoader.h  PolyUIRasterDrawingCanvas.h  PolyUITextInput.h  PolyUIXML.h
Modules/Contents/UI/Source/: PolyUILoader.cpp  PolyUIRasterDrawingCanvas.cpp  PolyUITextInput.cpp
UserProject/: CMakeLists.txt
UserProject/src/: Main.cpp
